force-app/main/default/objects/Reimbursement__c/Reimbursement__c.object-meta.xml
<CustomObject>
    <label>Reimbursement</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Reimbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>