force-app/main/default/objects/Reimbursement__c/fields/Apt_Lot__c.field-meta.xml
<CustomField>
    <fullName>Apt_Lot__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Apt / Lot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>