force-app/main/default/objects/Reimbursement__c/fields/BrandCode__c.field-meta.xml
<CustomField>
    <fullName>BrandCode__c</fullName>
    <description>Contains brand code from the parent Issue.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contains brand code from the parent Issue.</inlineHelpText>
    <label>Brand Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>