force-app/main/default/objects/Reimbursement__c/fields/Cheque_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Amount__c</fullName>
    <label>Check Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>