force-app/main/default/objects/Reimbursement__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>City / Locality</label>
    <length>80</length>
    <type>Text</type>
</CustomField>