force-app/main/default/objects/Reimbursement__c/fields/Correspondence_Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Fulfilment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfilment</label>
    <referenceTo>Correspondence_Fulfilment__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>