force-app/main/default/objects/Reimbursement__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <description>Feed Outbound</description>
    <formula>PackageCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon</label>
    <type>Text</type>
</CustomField>