force-app/main/default/objects/Reimbursement__c/fields/Coupon_Qty__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Qty__c</fullName>
    <defaultValue>&apos;0&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Coupon Qty</label>
    <length>18</length>
    <type>Text</type>
</CustomField>