force-app/main/default/objects/Reimbursement__c/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <description>Feed Outbound</description>
    <formula>Consumer__r.CustomerID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerID</label>
    <type>Text</type>
</CustomField>