force-app/main/default/objects/Reimbursement__c/fields/Ecount_ID__c.field-meta.xml
<CustomField>
    <fullName>Ecount_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ecount ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>