force-app/main/default/objects/Reimbursement__c/fields/ExtractDate__c.field-meta.xml
<CustomField>
    <fullName>ExtractDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExtractDate</label>
    <type>Date</type>
</CustomField>