force-app/main/default/objects/Reimbursement__c/fields/ExtractDateFeed__c.field-meta.xml
<CustomField>
    <fullName>ExtractDateFeed__c</fullName>
    <formula>if(Text(ExtractDate__c) != &apos;&apos;,Text(month(ExtractDate__c))+&apos;/&apos;+text(day(ExtractDate__c))+&apos;/&apos;+text(year(ExtractDate__c))+&apos; 00:00:00&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExtractDateFeed</label>
    <type>Text</type>
</CustomField>