force-app/main/default/objects/Reimbursement__c/fields/FeedCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FeedCreatedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FeedCreatedDate</label>
    <type>DateTime</type>
</CustomField>