force-app/main/default/objects/Reimbursement__c/fields/FeedLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>FeedLastModifiedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FeedLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>