force-app/main/default/objects/Reimbursement__c/fields/FulfillDate__c.field-meta.xml
<CustomField>
    <fullName>FulfillDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FulfillDate</label>
    <type>Date</type>
</CustomField>