force-app/main/default/objects/Reimbursement__c/fields/IssueID__c.field-meta.xml
<CustomField>
    <fullName>IssueID__c</fullName>
    <description>Feed Outbound</description>
    <formula>Issue__r.CaseNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue ID</label>
    <type>Text</type>
</CustomField>