force-app/main/default/objects/Reimbursement__c/fields/MailToAddressZip4__c.field-meta.xml
<CustomField>
    <fullName>MailToAddressZip4__c</fullName>
    <description>Feed Outbound - Empty Value</description>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MailToAddressZip4</label>
    <type>Text</type>
</CustomField>