force-app/main/default/objects/Reimbursement__c/fields/OpCo__c.field-meta.xml
<CustomField>
    <fullName>OpCo__c</fullName>
    <formula>Issue__r.Operating_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpCo</label>
    <type>Text</type>
</CustomField>