force-app/main/default/objects/Reimbursement__c/fields/PackageCode__c.field-meta.xml
<CustomField>
    <fullName>PackageCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Package Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>