force-app/main/default/objects/Reimbursement__c/fields/ProgramCode__c.field-meta.xml
<CustomField>
    <fullName>ProgramCode__c</fullName>
    <description>Feed Outbound - Empty Value</description>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Code</label>
    <type>Text</type>
</CustomField>