force-app/main/default/objects/Reimbursement__c/fields/Reimbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Type__c</fullName>
    <label>Reimbursement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plastic</fullName>
                <default>true</default>
                <label>Plastic</label>
            </value>
            <value>
                <fullName>Virtual Card</fullName>
            </value>
            <value>
                <fullName>Virtual Pending</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
                <isActive>false</isActive>
                <label>Check</label>
            </value>
            <value>
                <fullName>Wirecard</fullName>
                <isActive>false</isActive>
                <label>Wirecard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>