force-app/main/default/objects/Reimbursement__c/fields/ReshipDate__c.field-meta.xml
<CustomField>
    <fullName>ReshipDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ReshipDate</label>
    <type>Date</type>
</CustomField>