force-app/main/default/objects/Reimbursement__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>State / Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>