force-app/main/default/objects/Reimbursement__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street Address / Address1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>