force-app/main/default/objects/Reimbursement__c/fields/Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Id__c</fullName>
    <description>Feed Outbound-Reimbrsement</description>
    <formula>&apos;ALORICAALTRIA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Id</label>
    <type>Text</type>
</CustomField>