force-app/main/default/objects/Reimbursement__c/fields/Transaction_Management_History__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Management_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Management History</label>
    <referenceTo>Transaction_Management_History__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>