force-app/main/default/objects/Reimbursement__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Id</label>
    <referenceTo>Transaction_Management__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>