force-app/main/default/objects/Reimbursement__c/fields/TransactionIdName__c.field-meta.xml
<CustomField>
    <fullName>TransactionIdName__c</fullName>
    <description>Feed Outbound</description>
    <formula>TransactionId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TransactionIdName</label>
    <type>Text</type>
</CustomField>