force-app/main/default/objects/Reimbursement__c/fields/TransactionManagementHistoryID__c.field-meta.xml
<CustomField>
    <fullName>TransactionManagementHistoryID__c</fullName>
    <description>Feed Outbound</description>
    <formula>Transaction_Management_History__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Management History ID</label>
    <type>Text</type>
</CustomField>