force-app/main/default/objects/Reimbursement__c/fields/Transfer_to_Altria_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Altria_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transfer to Altria Date</label>
    <type>Date</type>
</CustomField>