force-app/main/default/objects/Reimbursement__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code / Postal Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>