force-app/main/default/objects/Reimbursement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BrandCode__c</columns>
    <columns>Cheque_Amount__c</columns>
    <columns>Consumer__c</columns>
    <columns>Coupon__c</columns>
    <columns>Coupon_Qty__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>143781</value>
    </filters>
    <label>All</label>
</ListView>